# USDF-backend

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  configuration.sample.toml
scripts/: redisctl.sh
src/: application.rs  configuration.rs  error.rs  main.rs  observability.rs  state.rs
src/server/: app_server.rs  mod.rs
src/server/handlers/: get_estimation.rs  get_signature.rs  get_whitelist.rs  health.rs  mod.rs  utils.rs
