[package]
name = "usdf-back"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "./src/main.rs"
name = "usdf-back"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.13"
tower-http = { version = "0.4", features = ["cors"] }
redis = { version = "0.27", features = ["tls-rustls-insecure"] }

ed25519-dalek = "2.1.1"
rlp = "0.6.1"
sha2 = "0.10.8"
hex = "0.4.3"
bs58 = "0.5.1"

anyhow = "1"
config = "0.14.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_with = { version = "3", features = ["chrono_0_4"] }
secrecy = { version = "0.10.3", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "json",
    "env-filter",
] }
